fixed some bugs

--- a/app/jvm/src/main/twirl/dynamics.scala.html
+++ b/app/jvm/src/main/twirl/dynamics.scala.html
@@ -12,7 +12,7 @@
       </div>
     </column>
   </row>
-  <row class="equal width row">
+@*  <row class="equal width row">
   <h1 class="ui orange header">The team</h1>
   </row>
   <row class="equal width row">
@@ -31,6 +31,6 @@
       <img class="ui Medium image" src="/resources/">
       <p class="ui label">Paolo Pierobon</p>
     </column>
-  </row>
+  </row>*@
   @models.html.cellmodel()
 </section>
