--- a/app/jvm/src/main/twirl/models/cellmodel.scala.html
+++ b/app/jvm/src/main/twirl/models/cellmodel.scala.html
@@ -2,11 +2,9 @@
 <row class="row" data-view="notch-delta">
   <column class="column">
      @models.html.field("cells")
+     @models.html.last()
   </column>
   <column class="column">
     @models.html.dashboard()
-  </column>
-  <column class="ui column">
-      <p>This model is a spatial model that simulates delta-notch interactions between different number of cells</p>
   </column>
 </row>
